# parse-css-to-stylesheet

./: .gitignore  .npmrc  CHANGELOG.md  Cargo.toml  README.md  index.d.ts  index.js  package.json  pnpm-lock.yaml
.github/workflows/: CI.yml
__test__/: compileMode.spec.mjs.back  compileMode.spec.mjs.md  compileMode.spec.mjs.snap  index.js  index.spec.mjs  index.spec.mjs.back  index.spec.mjs.md  index.spec.mjs.snap  selector.spec.mjs  selector.spec.mjs.md  selector.spec.mjs.snap  variables.spec.mjs  variables.spec.mjs.md  variables.spec.mjs.snap
__test__/fixure/: Mod.scss  mod.jsx  normal.jsx  pesudo copy.scss  pesudo.jsx  pesudo.scss  test.scss
__test__/fixure/rn/: index.jsx  index.scss
asset/: Mod.scss  mod.jsx
flatbuffers/: stylesheet.fbs  stylesheet_generated.h
npm/android-arm-eabi/: README.md  package.json
npm/android-arm64/: README.md  package.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-universal/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/freebsd-x64/: README.md  package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: constants.rs  document.rs  json_writer.rs  lib.rs  main.rs  node.rs  parse_css_variables.rs  parse_style_properties.rs  scraper.rs  style_parser.rs  style_write.rs  stylesheet_generated.rs  utils.rs  visitor.rs
src/react_native/: create_stylesheet.rs  mod.rs  parse_style_properties.rs  rn_style_parser.rs
src/style_propetries/: animation.rs  animation_multi.rs  aspect_ratio.rs  background.rs  background_image.rs  background_position.rs  background_repeat.rs  background_size.rs  border.rs  border_color.rs  border_radius.rs  border_style.rs  border_width.rs  box_orient.rs  box_shadow.rs  color.rs  display.rs  expr.rs  flex.rs  flex_align.rs  flex_basis.rs  flex_direction.rs  flex_wrap.rs  font_size.rs  font_style.rs  font_weight.rs  gap.rs  item_align.rs  length_value.rs  letter_spacing.rs  line_height.rs  linear_gradient.rs  macros.rs  marin_padding.rs  max_size.rs  mod.rs  normal.rs  number.rs  opacity.rs  overflow.rs  (+23 more)
src/style_propetries/graident_properties/: linear_gradient.rs  mod.rs  (+1 more)
src/style_transform/: border_radius.rs  constraint_size.rs  macros.rs  margin_padding.rs  mod.rs  style_value_type.rs  text_decoration.rs  traits.rs  utils.rs
src/style_transform_backend/: constraint_size.rs  macros.rs  style_value_type.rs
(+60 files in other folders)
