[package]
name = "parse-css-to-stylesheet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cssparser = "0.31.2"
ego-tree = "0.6.2"
html5ever = "0.26.0"
lightningcss = {version = "1.0.0-alpha.45", features = ["visitor"]}
once_cell = "1.18.0"
selectors = "0.25.0"
smallvec = "1.11.0"
style = "0.1.0"
swc_common = {version = "0.32.1", features = ["tty-emitter", "sourcemap"]}
swc_ecma_ast = {version = "0.109.1"}
swc_ecma_parser = "0.139.1"
swc_ecma_visit = "0.95.1"
