[package]
name = "parse-css-to-stylesheet"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"
cssparser = "0.31.2"
ego-tree = "0.6.2"
html5ever = "0.26.0"
lightningcss = {version = "1.0.0-alpha.45", features = ["visitor", "into_owned"]}
once_cell = "1.18.0"
selectors = "0.25.0"
smallvec = "1.11.0"
style = "0.1.0"
regex = "1"
swc_common = {version = "0.33.0", features = ["tty-emitter", "sourcemap"]}
swc_ecma_ast = {version = "0.110.0"}
swc_ecma_codegen = "0.146.0"
swc_ecma_parser = "0.141.0"
swc_ecma_visit = "0.96.0"
swc_ecmascript = {version = "0.235.1", features = ["transforms", "typescript"]}
swc_ecma_transforms_base = "0.134.0"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
