[package]
name = "parse-css-to-stylesheet"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"
cssparser = "0.33.0"
ego-tree = "0.6.2"
html5ever = "0.26.0"
indexmap = "2.2.3"
lightningcss = {version = "1.0.0-alpha.45", features = ["visitor", "into_owned"]}
once_cell = "1.18.0"
smallvec = "1.11.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
style = "0.1.0"
pcre2 = "0.2.6"
regex = "1.10.3"
swc_core = { version = "0.90.24", features = ["__common", "ecma_transforms_typescript", "ecma_ast", "ecma_plugin_transform", "ecma_utils", "ecma_parser", "ecma_visit", "ecma_codegen", "__testing_transform"]}
flatbuffers = "24.3.25"
rust_decimal = "1.36.0"
rust_decimal_macros = "1.36.0"
bitflags = "2.4.1"
parcel_selectors = "0.26.5"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
